# tangos-fullstack

backend/: README.md  pyproject.toml
backend/app/: graph.py  listing.py  main.py  models.py  search.py  store.py
backend/tests/: conftest.py  test_api.py  test_graph.py  test_listing.py  test_search.py
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  sanctions.ts
frontend/src/components/: AppLayout.tsx  Pagination.tsx  RelationGraph.tsx  SearchResultsTable.tsx
frontend/src/hooks/: useDebouncedValue.test.ts
frontend/src/pages/: GraphPage.tsx  SearchPage.tsx
frontend/src/types/: api.ts
frontend/src/utils/: graphLayout.test.ts  graphLayout.ts
